feat: add tram map and stop filters
